tests/scroll_corpus/errors/unclosed_brace.scroll
// Unclosed brace in scroll block
type Foo { x: int, }
scroll "bad" {
    description: "Should fail";
    require x: int;
    provide y: int;
    set y: int = 5;
